[package]
name = "country-slice"
version = "0.1.0"
edition = "2018"

[features]
default = [
  "bevy/bevy_gltf",
  "bevy/bevy_winit",
  "bevy/render",
  "bevy/png",
]

native = [
  "bevy/bevy_wgpu",
]

web = [
  "bevy_webgl2"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = {version="0.5.0", default-features=false}
bevy_webgl2 = {version="0.5.0", optional=true}
bevy_dolly = { git = "https://github.com/BlackPhlox/bevy_dolly" }
dolly = "0.1.3"
bevy_mod_picking = "0.4.0" #for selecting objects in 3D from cursor screenspace position
tri-mesh = "0.5.0"
itertools = "0.10.1"
fastrand = "1.5.0"
console_error_panic_hook = "0.1"
