[package]
name = "country-slice"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.5"
#bevy_dolly = { git = "https://github.com/slyedoc/bevy_dolly", branch = "bevy-native"}
bevy_dolly = { path = "../bevy_dolly" }
bevy_mod_bounding = "0.1"
bevy_mod_picking = "0.4" #for selecting objects in 3D from cursor screenspace position
gltf = "0.16"
tri-mesh = "0.5"
itertools = "0.10"
fastrand = "1.5"

[patch.crates-io]
bevy = { git = "https://github.com/bevyengine/bevy", branch="main" }
bevy_mod_raycast = { git = "https://github.com/slyedoc/bevy_mod_raycast" }
bevy_mod_bounding = { git = "https://github.com/slyedoc/bevy_mod_bounding" }
bevy_mod_picking = { git = "https://github.com/slyedoc/bevy_mod_picking" }